--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "era",
-  "author": "insomnia90",
-  "description": "REST adapter for express",
   "version": "0.0.1",
+  "description": "REST adapter for express",
+  "author": "insomnia90",
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
+    "type": "git",
     "url": "https://github.com/insomnia90/era.git"
   },
-  "main": "index",
   "keywords": [
     "express",
     "framework",
