--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "insomnia90",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
